public interface ResourceMarker {
    public void markSlotFree(int resourceId);

    public void markSlotBusy(int resourceId);

}
