public class SpaceResourceMarker implements ResourceMarker {

    public SpaceResourceMarker() {
    }

    @Override
    public void markSlotFree(int resourceId) {

    }

    @Override
    public void markSlotBusy(int resourceId) {

    }
}
