public class TimeResourceMarker implements ResourceMarker {

    public TimeResourceMarker() {
    }

    @Override
    public void markSlotFree(int resourceId) {

    }

    @Override
    public void markSlotBusy(int resourceId) {

    }
}
